End Points refactoring